Add gtk_notebook_accessible_get_n_children

https://bugzilla.gnome.org/show_bug.cgi?id=577392